test_scores/negative_dimers/features/P37198.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P37198.pkl.xz